# archive-indexer

./: .gitignore  .importlinter  Makefile  pyproject.toml  readme.md
config/: buckets.yaml  sources.yaml
plugins/logseq-archive-indexer/: README.md  index.html  package.json
plugins/logseq-archive-indexer/src/: main.js  styles.css
sample_data/: README.md
scripts/: generate_fake_inputs.py
src/archive_indexer/: __init__.py  __main__.py  cli.py  config.py  db.py
src/archive_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/archive_indexer/adapters/: blarify.py  db.py  embedding.py  llm.py  ocr.py
src/archive_indexer/app/: cli.py
src/archive_indexer/config/: settings.py
src/archive_indexer/core/: parsers.py  yaml_parser.py
src/archive_indexer/services/: bucket_service.py  ingest_service.py  logseq_snapshot_service.py
tests/: mvp_test_blueprint.md  test_fake_input_generator.py
tests/fixtures/: fake_bucket_rules.json  fake_caption_results.json  fake_documents.json  fake_media_items.json  fake_ocr_results.json  fake_relevance_judgments.json  fake_retrieval_queries.json
tests/unit/: mock_db.py  test_blarify_adapter.py  test_core_parsers.py  test_core_yaml_parser.py  test_high_coverage_modules.py  test_logseq_snapshot_service.py  test_neo4j_adapter.py  test_phase0_cli.py  test_phase1_db.py  test_phase2_ingest.py  test_phase3_pipeline.py  test_roadmap_phases.py  test_services_bucket_service.py  test_services_ingest_helpers.py
