[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-indexer"
version = "0.1.0"
description = "Local-first archive indexing MVP"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pydeps>=1.12",
  "ollama>=0.4.0",
  "ffmpeg-python>=0.2.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage>=7.0",
  "mutmut>=3.0",
]

[project.scripts]
archive-indexer = "archive_indexer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=src/archive_indexer",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["src/archive_indexer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.mutmut]
source_paths = ["src/archive_indexer"]
pytest_add_cli_args_test_selection = ["tests"]
